# python-monorepo

./: .gitignore  README.md  pyproject.toml
app/: main.py  pyproject.toml
lib/: __init__.py  math.py  pyproject.toml
