[project]
name = "app"
version = "0.1.0"
description = "A simple demo app"
authors = [
    {name = "lorne", email = "1991wangliang@gmail.com"},
]
requires-python = ">=3.12"
dependencies = ["lib"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
editable-dependencies = ["lib"]